tests/NormalTests/paczka1/small_fuzzy/14504967.err
Error in line 1: rEcjqpLT5 S167 38,9
Error in line 2: rEcjqpLT5 S499 71,8
Error in line 6: abZV S499 35,6
